        kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
    Fixes
        Plugins with vmethod hooks can now be reloaded on OS X
        Lua's os.system() now works on OS X
        Fixed default arguments in Lua gametype detection functions
        gui/hack-wish now properly assigns quality to items.
        gui/gm-editor handles lua tables properly
        steam-engine: fixed a crash on arena load
        tweak fps-min fixed
        workflow: Fixed some issues with stuck jobs
            - Note: Existing stuck jobs must be cancelled and re-added
    Misc Improvements
        dwarfmonitor widgets' positions, formats, etc. are now customizable (see Readme)
        dwarfmonitor weather display now separated from the date display
        dwarfmonitor: New mouse cursor widget
        gui/gm-editor: Pointers can now be displaced
        gui/hack-wish: renamed to gui/create-item
        "keybinding list" accepts a context
        nyan: Can now be stopped with dfhack-run
        quicksave: Restricted to fortress mode
        search: Now supports the noble suggestion screen (e.g. suggesting a baron)
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module
        The DFHACK_LOG_MEM_RANGES environment variable can be used to log information to stderr.log on OS X
        Fixed adventure mode menu names
        Fixed command usage information for some commands
    Lua
        Lua scripts will only be reloaded if necessary
        Added a df2console() wrapper, useful for printing DF (CP437-encoded) text to the console in a portable way
        Added a strerror() wrapper
    New internal commands
        hide/show: hide and show the console on Windows